Ajustes Create Quantidade e Preço

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,7 +12,7 @@ appDescription=CRUDL com data e hora
 worklistViewTitle=Manage Z270FREECRUD1Set
 
 #XTIT: Worklist page title
-worklistTitle=CRUDL com Data e Hora
+worklistTitle=CRUDQ c/ Data e Hora
 
 #XTIT: Table view title
 worklistTableTitle=Z270FREECRUD1Set
@@ -24,7 +24,7 @@ worklistSearchTooltip=Enter an Z270FREECRUD1Set name or a part of it.
 worklistNoDataWithSearchText=No matching Z270FREECRUD1Set found
 
 #XTIT: Table view title with placeholder for the number of items
-worklistTableTitleCount=Z270FREECRUD1Set ({0})
+worklistTableTitleCount=Produtos ({0})
 
 #XTIT: The title of the column containing the Codigo of Z270FREECRUD1Set
 tableNameColumnTitle=Codigo
